# MParT-SpeedTests

./: CompareBenchmarks.py  LICENSE
Samples/: .gitignore  CMakeLists.txt  MParTBuild.sh  PlotResults.py  RunAll.sh  SpeedTests_samples.cpp
Samples/ref_results/: ST_CPP_eval_d5_to2_nt16_THREADS_simpson.txt  ST_CPP_eval_d5_to2_nt1_CUDA_cc5.txt  ST_CPP_eval_d5_to2_nt1_SERIAL_cc5.txt  ST_CPP_eval_d5_to2_nt2_THREADS_cc5.txt  ST_CPP_eval_d5_to2_nt2_THREADS_simpson.txt  ST_CPP_eval_d5_to2_nt32_OPENMP_simpson.txt  ST_CPP_eval_d5_to2_nt32_THREADS_cc5.txt  ST_CPP_eval_d5_to2_nt32_THREADS_simpson.txt  ST_CPP_eval_d5_to2_nt4_THREADS_simpson.txt  ST_CPP_eval_d5_to2_nt8_OPENMP_simpson.txt  ST_CPP_eval_d5_to2_nt8_THREADS_simpson.txt  ST_CPP_eval_d5_to5_nt16_OPENMP_simpson.txt  ST_CPP_eval_d5_to5_nt16_THREADS_simpson.txt  ST_CPP_eval_d5_to5_nt1_SERIAL_cc5.txt  ST_CPP_eval_d5_to5_nt2_THREADS_simpson.txt  ST_CPP_eval_d5_to5_nt32_THREADS_simpson.txt  ST_CPP_eval_d5_to5_nt4_THREADS_simpson.txt  ST_CPP_eval_d5_to5_nt8_OPENMP_cc5.txt  ST_CPP_eval_d5_to5_nt8_THREADS_simpson.txt  ST_CPP_logdet_d5_to2_nt16_OPENMP_simpson.txt  ST_CPP_logdet_d5_to2_nt16_THREADS_cc5.txt  ST_CPP_logdet_d5_to2_nt1_SERIAL_simpson.txt  ST_CPP_logdet_d5_to2_nt2_OPENMP_simpson.txt  ST_CPP_logdet_d5_to2_nt2_THREADS_simpson.txt  ST_CPP_logdet_d5_to2_nt32_OPENMP_cc5.txt  ST_CPP_logdet_d5_to2_nt32_OPENMP_simpson.txt  ST_CPP_logdet_d5_to2_nt32_THREADS_cc5.txt  ST_CPP_logdet_d5_to2_nt32_THREADS_simpson.txt  ST_CPP_logdet_d5_to2_nt4_OPENMP_cc5.txt  ST_CPP_logdet_d5_to2_nt4_OPENMP_simpson.txt  (+15 more)
results11132023_0917/: cpu_spec.txt  (+22 more)
(+102 files in other folders)
